--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Me.png" style="width:45%;" class="w3-round"><br><br>
+    <img src="Me.png" style="width:55%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
     <p class="w3-text-grey">Template by W3.CSS</p>
   </div>
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <!-- Header -->
   <header id="portfolio">
-    <a href="#"><img src="/w3images/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+    <a href="#"><img src="LaurenCircle.png" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
     <h1><b>My Portfolio</b></h1>
@@ -61,10 +61,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/mountains.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="books-2463779_1920.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Research</b></p>
+        <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
