--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Me.png" style="width:55%;" class="w3-round"><br><br>
-    <h4><b>PORTFOLIO</b></h4>
+    <img src="Me.png" style="width:70%;" class="w3-round"><br><br>
+    <h4><b>LAUREN FELL</b></h4>
     <p class="w3-text-grey">Template by W3.CSS</p>
   </div>
   <div class="w3-bar-block">
@@ -123,10 +123,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="/w3images/avatar_g.jpg" alt="Me" style="width:100%">
-    </div>
-    <div class="w3-col m6">
-      <img src="/w3images/me2.jpg" alt="Me" style="width:100%">
+      <img src="LaurenCircle.png" alt="Me" style="width:100%">
     </div>
   </div>
 
