--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#"><img src="LaurenCircle.png" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>My Portfolio</b></h1>
+    <h1><b>Lauren Fell</b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right">Filter:</span> 
       <button class="w3-button w3-black">ALL</button>
@@ -61,17 +61,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="books-2463779_1920.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="books-2463779_1920.jpg" alt="books" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Research</b></p>
         <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/lights.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="LunarSampler.png" alt="DesignProjects" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Design Projects</b></p>
+        <p>I regularly participate in contests as a freelancer to develop my cross-disciplinary skillset, as I see this as important for enabling perspective and creativity when coming up with new ideas. So far, I have won and placed in four contests for NASA - creation of a storyboard to explain RFID tagging in space (1st), creation of a course for implementing the Interplanetary Overlay Network in space (2nd), design of a collapsible radiation shield for shuttle travel (2nd), and design of a moon regolith collector and sorter (3rd).</p>
       </div>
     </div>
     <div class="w3-third w3-container">
