--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="books-2463779_1920.jpg" alt="books" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Research</b></p>
+        <p><b>RESEARCH</b></p>
         <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="LunarSampler.png" alt="DesignProjects" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Design Projects</b></p>
+        <p><b>DESIGN PROJECTS</b></p>
         <p>I regularly participate in contests as a freelancer to develop my cross-disciplinary skillset, as I see this as important for enabling perspective and creativity when coming up with new ideas. So far, I have won and placed in four contests for NASA - creation of a storyboard to explain RFID tagging in space (1st), creation of a course for implementing the Interplanetary Overlay Network in space (2nd), design of a collapsible radiation shield for shuttle travel (2nd), and design of a moon regolith collector and sorter (3rd).</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <img src="PsytAssist.png" alt="PsytAssistWebpage" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Diagnostic Tech for Psychologists</b></p>
+        <p><b>DIAGNOSTIC TECH FOR PSYCHOLOGISTS</b></p>
         <p>Cofounding PsytAssist - an app that autofills customisable reports for psychologists, I am passionate about making life easier for mental health professionals. The next stage of the project is underway, creating a video game to assist psychologists in performing diagnostic assessment for Autism Spectrum Disorder - for which we won the Brisbane Lord Mayor's Budding Entrepreneur Grant in 2017. </p>
       </div>
     </div>
@@ -93,23 +93,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="MeAndy.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="MeAndy.jpg" alt="personrobot" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
+        <p><b>ANDY THE ANATOMY BOT</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="MeUserTesting.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>UX Consulting</b></p>
+        <p><b>UX CONSULTING</b></p>
         <p>Utilising my knowledge of psychology, I have conducted and managed a range of projects as a UX consultant both in Australia and abroad. I have worked with mobile applications, websites, physical sites and self-service terminals, for clients ranging from small startups to large national companies.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <img src="EcuadorAndes.jpg" alt="AndesMountainsPeople" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Volunteering</b></p>
+        <p><b>VOLUNTEERING</b></p>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
