--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
   <div class="w3-panel w3-large">
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <i class="fa fa-google w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-youtube w3-hover-opacity"></i>
+    <a href="https://www.linkedin.com/in/lauren-fell"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://scholar.google.com.au/citations?user=0gMAFTcAAAAJ&hl=en"><i class="fa fa-google w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/andytheanatomybot/?hl=en"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="url"><i class="fa fa-youtube w3-hover-opacity"></i></a>
   </div>
 </nav>
 
