--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <h3>POPULAR TAGS</h3>
       <p>
-        <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">London</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Family</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Shopping</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Games</span>
+        <span class="w3-tag w3-black w3-margin-bottom">PSYCHOLOGY</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Quantum Cognition</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Technology</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Innovation</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Experimentation</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">DESIGN</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">RESEARCH</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Autism</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Trust</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Palaeontology</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">ROBOTICS</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Faces</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Social Perception</span>
       </p>
     </div>
 
