--- a/index.html
+++ b/index.html
@@ -200,21 +200,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third">
       <h3>MEDIA</h3>
       <ul class="w3-ul w3-hoverable">
-        <li class="w3-padding-16">
+        <a href="https://www.linkedin.com/in/lauren-fell"><li class="w3-padding-16">
           <img src="GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">7:30 Report - Gig Economy</span><br>
           <span>Speaking about working and usign Freelancer.com as a 'side gig'</span>
-        </li>
-        <li class="w3-padding-16">
+          </li></a>
+       <a href="https://www.linkedin.com/in/lauren-fell"> <li class="w3-padding-16">
           <img src="PsychofChoice.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Cut the Cliches Podcast</span><br>
           <span>Invited as a guest to speak about the psychology of choice</span>
-        </li> 
-         <li class="w3-padding-16">
+         </li></a>
+         <a href="https://www.linkedin.com/in/lauren-fell"><li class="w3-padding-16">
           <img src="NASAcontest.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Winning a NASA contest</span><br>
           <span>Chatting about my experience winning my first contest with NASA</span>
-        </li> 
+           </li></a>
       </ul>
     </div>
 
