--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-bar-block">
     <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
-    <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-pen-nib fa-fw w3-margin-right"></i>DESIGN</a> 
+    <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-pen-nib fa-fw w3-margin-right"></i>DESIGN</a> 
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>UX CONSULTING</a> 
-    <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-hands-helping fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
-    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-brain fa-fw w3-margin-right"></i>PSYTASSIST</a> 
-    <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-robot fa-fw w3-margin-right"></i>ANDY</a> 
+    <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-hands-helping fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
+    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-brain fa-fw w3-margin-right"></i>PSYTASSIST</a> 
+    <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fas-robot fa-fw w3-margin-right"></i>ANDY</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
   <div class="w3-panel w3-large">
