--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-pen-nib fa-fw w3-margin-right"></i>DESIGN</a> 
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>UX CONSULTING</a> 
     <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-hands-helping fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
-    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-brain fa-fw w3-margin-right"></i>PSYTASSIST</a> 
+    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fas fa-brain"></i>PSYTASSIST</a> 
     <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fas-robot fa-fw w3-margin-right"></i>ANDY</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
