--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
+  <script src="js/fontawesome-all.min.js"></script>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidebar/menu -->
