--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Lauren Fell</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,10 +24,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
-      <button class="dropdown-btn"><i class="fa fa-plus fa-fw w3-margin-right"></i>Other Projects
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-container">
+  <div class="w3-dropdown-hover">
+    <button class="w3-button">Other Projects 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="w3-dropdown-content w3-bar-block w3-card-4">
     <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paint-brush fa-fw w3-margin-right"></i>DESIGN</a> 
     <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-microchip fa-fw w3-margin-right"></i>ANDY</a> 
     <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-handshake-o fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
