--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
   <div class="w3-dropdown-hover">
-    <button class="w3-button"><i class="fa fa-users fa-fw w3-margin-right"></i>OTHER PROJECTS 
+    <button class="w3-button"><i class="fa fa-plus fa-fw w3-margin-right"></i>OTHER PROJECTS 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
