--- a/research/index.html
+++ b/research/index.html
@@ -48,6 +48,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+<!-- Page content -->
+<div class="w3-main" style="margin-left:300px"> 
+ 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
   <img class="w3-image" src="/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800">
@@ -55,9 +58,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <h1 class="w3-xxlarge">Le Catering</h1>
   </div>
 </header>
-
-<!-- Page content -->
-<div class="w3-content" style="max-width:1100px">
 
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
