--- a/research/index.html
+++ b/research/index.html
@@ -17,7 +17,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Me.png" style="width:70%;" class="w3-round"><br><br>
+    <img src="https://lozelise.github.io/Portfolio/Me.png" style="width:70%;" class="w3-round"><br><br>
     <h4><b>LAUREN FELL</b></h4>
   </div>
   <div class="w3-bar-block">
@@ -53,7 +53,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
  
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800">
+  <img class="w3-image" src="https://lozelise.github.io/Portfolio/books-2463779_1920.jpg" alt="books" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Le Catering</h1>
   </div>
