--- a/research/index.html
+++ b/research/index.html
@@ -17,12 +17,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="https://lozelise.github.io/Portfolio/Me.png" style="width:70%;" class="w3-round"><br><br>
+    <img src="Me.png" style="width:70%;" class="w3-round"><br><br>
     <h4><b>LAUREN FELL</b></h4>
   </div>
   <div class="w3-bar-block">
     <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
+  <div class="w3-dropdown-hover">
+    <button class="w3-button"><i class="fa fa-pie-chart fa-fw w3-margin-right"></i>RESEARCH & TEACHING 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="w3-dropdown-content w3-bar-block w3-card-4">
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
+    <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paper-plsnr fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
+    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university-o fa-fw w3-margin-right"></i>TEACHING</a> 
+  </div>
+    </div>
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
     <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
   <div class="w3-dropdown-hover">
