--- a/research/index.html
+++ b/research/index.html
@@ -28,8 +28,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
     <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
-    <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paper-plsnr fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
-    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university-o fa-fw w3-margin-right"></i>TEACHING</a> 
+    <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paper fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
+    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
   </div>
     </div>
     <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
@@ -71,7 +71,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="https://lozelise.github.io/Portfolio/Papers.png" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
