--- a/research/index.html
+++ b/research/index.html
@@ -71,12 +71,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">Publications</h1><br>
-      <p class="w3-large">The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+      <p class="w3-large">The cognitive decision space of trust: an exploratory study of image trustworthiness and the propensity to deceive
+L Fell, PD Bruza, SK Devitt, G Oliver, M Gradwell, H Partridge
+        3	2016 </p>
+<p>Design insights into embedding virtual reality content into life skills training for people with intellectual disability
+R Brown, L Sitbon, L Fell, S Koplick, C Beaumont, M Brereton
+  Proceedings of the 28th Australian Conference on Computer-Human Interaction	Citations:2	Year:2016 </p>
+<p>Towards universal search design
+L Sitbon, L Fell, D Poxon, J Zhang, S Geva
+  Proceedings of the 2014 Australasian Document Computing Symposium, 109	Citations:2	Year:2014 </p>
+<p>An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making
+L Fell, S Dehdashti, P Bruza, C Moreira
+arXiv preprint arXiv:1908.07935	2019 </p>
+<p>Are decisions of image trustworthiness contextual? A pilot study
+PD Bruza, L Fell 2018 </p>
+<p>Modelling Dynamic Interactions between Relevance Dimensions
+S Uprety, S Dehdashti, L Fell, P Bruza, D Song
+arXiv preprint arXiv:1907.10943		2019 </p>
+<p>Towards a Quantum-Like Cognitive Architecture for Decision-Making
+C Moreira, L Fell, S Dehdashti, P Bruza, A Wichert
+arXiv preprint arXiv:1905.05176		2019 </p>
+<p> Do you trust this image? Exploring the subjectivity of image trustworthiness from a cognitive perspective
+PD Bruza, L Fell, SK Devitt, G Oliver, M Gradwell, HL Partridge
+2017</p>
+<p>Immersive digital experiences to ease people with intellectual disability into new physical spaces
+L Sitbon, RA Brown, L Fell, S Koplick, C Beaumont</p>
       <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
   </div>
