--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </header>
   
-  <p class="w3-large w3-text-grey w3-hide-medium">I work on the belief that it doesn't matter what your background is or how much formal training you have in an area, you have something unique to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</p>
+  <p class="w3-large w3-text-grey w3-hide-medium w3-right w3-margin"><i>I work on the belief that it doesn't matter what your background is or how much formal training you have in an area, you have something unique to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</p>
   
     <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
