--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </header>
   
-  <p class="w3-large w3-text-grey w3-hide-medium w3-right w3-margin"><i>I work on the belief that a creative perspective is often more important than background knowledge or formal training. You will have something unique to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</i></p>
+  <p class="w3-large w3-text-grey w3-hide-medium w3-right w3-margin"><i>I work on the belief that a creative perspective is often more important than background knowledge or formal training. You will have something <a href=<i class="w3-text-teal">unique</i></a> to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</i></p>
   
     <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
@@ -94,8 +94,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="books-2463779_1920.jpg" alt="books" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>RESEARCH</b></p>
+        <p><b>RESEARCH & TEACHING</b></p>
         <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
+        <p>Teaching into the Masters of IT at Queensland University of Technology, I bring a cognition-centric approach which enables students to gain a deeper understanding of why we have technology and how we use it.  
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
