--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </header>
   
-  <p class="w3-large w3-text-grey w3-hide-medium w3-right w3-margin"><i>I work on the belief that a creative perspective is often more important than background knowledge or formal training. You will have something <i class="w3-text-teal">unique</i> to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</i></p>
+  <p class="w3-large w3-text-grey w3-hide-medium w3-right w3-margin"><i>I work on the belief that a creative perspective is often more important than background knowledge or formal training. You will have something <i class="w3-text-teal" "big">unique</i> to offer that could mean the difference between a good idea that works within the lines or a great idea that's outside the box</i></p>
   
     <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
