--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="PsytAssist.png" alt="PsytAssistWebpage" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>DIAGNOSTIC TECH FOR PSYCHOLOGISTS</b></p>
-        <p>Cofounding PsytAssist - an app that autofills customisable reports for psychologists, I am passionate about making life easier for mental health professionals. The next stage of the project is underway, creating a video game to assist psychologists in performing diagnostic assessment for Autism Spectrum Disorder - for which we won the Brisbane Lord Mayor's Budding Entrepreneur Grant in 2017. </p>
+        <p>Cofounding PsytAssist - an app that autofills customisable reports for psychologists, I am passionate about making life easier for mental health professionals. This tool is aimed at providing psychologists with a simple and time-effective means of generating reports and letters for their clients, focusing less time on administration and more time on their valuable work.</p>
+        <p>The next stage of the project is underway, creating a video game to assist psychologists in performing diagnostic assessment for Autism Spectrum Disorder - for which we won the Brisbane Lord Mayor's Budding Entrepreneur Grant in 2017.</p>
       </div>
     </div>
   </div>
