--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
-    <p>Originally from Sydney, I hold a BA Psych (Hons) from Macquarie University. Moving to Brisbane in early 2014, I joined a research group at QUT specialising in Quantum Cognition - the application of theories of quantum physics to explain cognitive phenomena. I have since worked in multiple research assistant positions at the university, where I enjoy learning through, assisting in, and developing varied experiments to test these exciting theories. This journey has lead me now to begin my PhD in Quantum Cognition where I look forward to exploring the models of human and animal cognition that may be created using the mathematics of quantum mechanics.</p>
+    <p>Originally from Sydney, I hold a BA Psych (Hons) from Macquarie University. Moving to Brisbane in early 2014, I joined a research group at Queensland University of Technology specialising in Quantum Cognition - the application of theories of quantum physics to explain cognitive phenomena. After working as a research assistant whilst holding additional jobs in mental health work and UX consulting, this background has lead me to begin my PhD in Quantum Cognition and to teach as an Associate Lecturer in the Masters of IT program at QUT.</p>
 
-<p>In the past I have worked in data entry, retail, call-center, door-to-door sales (in Sydney and Dublin), as an electrician’s assistant, medical secretary, and volunteered in reforestation in the Galapagos, farming in Ecuador, and on a palaeontology dig in Argentina. More recently, I have worked in Usability and Accessibility, as a mental health support worker, and research assistant at QUT across two projects (quantum processes in image trust decisions and virtual reality for disability). </p>
+<p>I have a diverse background of work, ranging from door-to-door sales in Australia and Ireland to electrician's assistant, to a palaeontology volunteer position in Argentina. I also participate in various crowd-sourced innovation challenges for a range of organisations, most notably NASA - with whom I have placed first in one challenge, second in two and third in another. Some of my designs and concepts in these challenges are being tested for use in space exploration and sample-collection. </p>
 
-<p>In addition to this, I co-founded PsytAssist - a report and letter writing tool for Allied Health professionals, with an aim to develop this into a program to assist in the diagnosis of ASD - a concept for which I won the Lord Mayor's Budding Entrepreneur Grant in Brisbane. I also participate in various crowd-sourced innovation challenges for a range of organisations , most notably NASA - with whom I have placed first in one challenge, second in two and third in another. Some of my designs and concepts in these challenges are being tested for use in space exploration and sample-collection. </p>
+<p>In addition to this, I co-founded PsytAssist - a report and letter writing tool for Allied Health professionals, with an aim to develop this into a program to assist in the diagnosis of ASD - a concept for which I won the Lord Mayor's Budding Entrepreneur Grant in Brisbane. </p>
 
 <p>I believe in developing my skills creatively across industries so that I can tackle every opportunity with lateral thinking and from new and innovative angles. </p>
     <hr>
@@ -224,7 +224,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <a href="https://www.abc.net.au/7.30/australias-gig-economy.-is-work-on-demand-the-new/10103320"><li class="w3-padding-16">
           <img src="GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">7:30 Report - Gig Economy</span><br>
-          <span>Speaking about working and usign Freelancer.com as a 'side gig'</span>
+          <span>Speaking about working and using Freelancer.com as a 'side gig'</span>
           </li></a>
        <a href="https://commswork.com.au/cut-the-cliches-episode-11-psychology-of-choice-lauren-fell"> <li class="w3-padding-16">
           <img src="PsychofChoice.png" class="w3-left w3-margin-right" style="width:50px">
