--- a/research/index.html
+++ b/research/index.html
@@ -185,7 +185,7 @@ L Sitbon, RA Brown, L Fell, S Koplick, C Beaumont</p>
         <a href="https://lozelise.github.io/Portfolio/https://www.abc.net.au/7.30/australias-gig-economy.-is-work-on-demand-the-new/10103320"><li class="w3-padding-16">
           <img src="GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">7:30 Report - Gig Economy</span><br>
-          <span>Speaking about working and usign Freelancer.com as a 'side gig'</span>
+          <span>Speaking about working and using Freelancer.com as a 'side gig'</span>
           </li></a>
        <a href="https://commswork.com.au/cut-the-cliches-episode-11-psychology-of-choice-lauren-fell"> <li class="w3-padding-16">
           <img src="https://lozelise.github.io/Portfolio/PsychofChoice.png" class="w3-left w3-margin-right" style="width:50px">
