--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="Me.png" style="width:70%;" class="w3-round"><br><br>
+    <img src="https://lozelise.github.io/Portfolio/Me.png" style="width:70%;" class="w3-round"><br><br>
     <h4><b>LAUREN FELL</b></h4>
   </div>
   <div class="w3-bar-block">
-    <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
+    <a href="https://lozelise.github.io/Portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
   <div class="w3-dropdown-hover">
     <button class="w3-button"><i class="fa fa-pie-chart fa-fw w3-margin-right"></i>RESEARCH & TEACHING 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-    <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
-    <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-o fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
-    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
+    <a href="https://lozelise.github.io/Portfolio/research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
+    <a href="https://lozelise.github.io/Portfolio/publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-o fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
+    <a href="https://lozelise.github.io/Portfolio/teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
   </div>
     </div>
-    <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
-    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
+    <a href="https://lozelise.github.io/Portfolio/uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
+    <a href="https://lozelise.github.io/Portfolio/psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
   <div class="w3-dropdown-hover">
     <button class="w3-button"><i class="fa fa-plus fa-fw w3-margin-right"></i>OTHER PROJECTS 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-    <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paint-brush fa-fw w3-margin-right"></i>DESIGN</a> 
-    <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-microchip fa-fw w3-margin-right"></i>ANDY</a> 
-    <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-handshake-o fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
+    <a href="https://lozelise.github.io/Portfolio/design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paint-brush fa-fw w3-margin-right"></i>DESIGN</a> 
+    <a href="https://lozelise.github.io/Portfolio/andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-microchip fa-fw w3-margin-right"></i>ANDY</a> 
+    <a href="https://lozelise.github.io/Portfolio/volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-handshake-o fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
   </div>
     </div>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
@@ -94,10 +94,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="books-2463779_1920.jpg" alt="books" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
+        <a href="https://lozelise.github.io/Portfolio/research>
         <p><b>RESEARCH & TEACHING</b></p>
         <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
         <p>Teaching into the Masters of IT at Queensland University of Technology, I bring a cognition-centric approach which enables students to gain a deeper understanding of why we have technology and how we use it.  
       </div>
+                 </a>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="LunarSampler.png" alt="DesignProjects" style="width:100%" class="w3-hover-opacity">
