--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
      <a href="https://lozelise.github.io/Portfolio/research> <img src="books-2463779_1920.jpg" alt="books" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-                                        <a href="https://lozelise.github.io/Portfolio/research><p><b>RESEARCH & TEACHING</b></p></a>
+                                        <a href="https://lozelise.github.io/Portfolio/research"><p><b>RESEARCH & TEACHING</b></p></a>
         <p>I am currently undertaking my PhD looking at how models based on the formalism of quantum physics can be applied to face perception. I'm particularly interested in experimental protocol design to test these models, as well as the psychological explanations for the results. I am also involved in projects investegating the use of virtual reality for people with cognitive impairments, modelling trust, and investegating trust in autonomous systems</p>
         <p>Teaching into the Masters of IT at Queensland University of Technology, I bring a cognition-centric approach which enables students to gain a deeper understanding of why we have technology and how we use it.  
       </div>
