--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     </a>
+    <a href="https://lozelise.github.io/Portfolio/design">
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="LunarSampler.png" alt="DesignProjects" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -108,6 +109,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>I regularly participate in contests as a freelancer to develop my cross-disciplinary skillset, as I see this as important for enabling perspective and creativity when coming up with new ideas. So far, I have won and placed in four contests for NASA - creation of a storyboard to explain RFID tagging in space (1st), creation of a course for implementing the Interplanetary Overlay Network in space (2nd), design of a collapsible radiation shield for shuttle travel (2nd), and design of a moon regolith collector and sorter (3rd).</p>
       </div>
     </div>
+    </a>
+    <a href="https://lozelise.github.io/Portfolio/psytassist">
     <div class="w3-third w3-container">
       <img src="PsytAssist.png" alt="PsytAssistWebpage" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -117,10 +120,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>The next stage of the project is underway, creating a video game to assist psychologists in performing diagnostic assessment for Autism Spectrum Disorder - for which we won the Brisbane Lord Mayor's Budding Entrepreneur Grant in 2017.</p>
       </div>
     </div>
+    </a>
   </div>
   
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
+    <a href="https://lozelise.github.io/Portfolio/andy">
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="MeAndy.jpg" alt="personrobot" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -128,6 +133,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
+    </a>
+    <a href="https://lozelise.github.io/Portfolio/uxconsult">
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="MeUserTesting.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -135,6 +142,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>Utilising my knowledge of psychology, I have conducted and managed a range of projects as a UX consultant both in Australia and abroad. I have worked with mobile applications, websites, physical sites and self-service terminals, for clients ranging from small startups to large national companies.</p>
       </div>
     </div>
+    </a>
+    <a href="https://lozelise.github.io/Portfolio/volunteering">
     <div class="w3-third w3-container">
       <img src="EcuadorAndes.jpg" alt="AndesMountainsPeople" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
@@ -142,6 +151,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
+    </a>
   </div>
 
 
@@ -215,25 +225,29 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <footer class="w3-container w3-padding-32 w3-dark-grey">
   <div class="w3-row-padding">
     <div class="w3-third">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </div>
-  
-    <div class="w3-third">
       <h3>MEDIA</h3>
       <ul class="w3-ul w3-hoverable">
+        <a href="https://www.qut.edu.au/science-engineering/about/news?id=149768"><li class="w3-padding-16">
+          <img src="NASAcontest.png" class="w3-left w3-margin-right" style="width:50px">
+          <span class="w3-large">Andy the Anatomy Bot at Robotronica</span><br>
+          <span>Andy the Anatomy bot visiting Robotronica, where Andy and I taught about Pneumatic Artificial Muscles and how to make them</span>
+           </li></a>
         <a href="https://www.abc.net.au/7.30/australias-gig-economy.-is-work-on-demand-the-new/10103320"><li class="w3-padding-16">
           <img src="GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">7:30 Report - Gig Economy</span><br>
           <span>Speaking about working and using Freelancer.com as a 'side gig'</span>
           </li></a>
+      </ul>
+    </div>
+  
+    <div class="w3-third">
+      <ul class="w3-ul w3-hoverable">
        <a href="https://commswork.com.au/cut-the-cliches-episode-11-psychology-of-choice-lauren-fell"> <li class="w3-padding-16">
           <img src="PsychofChoice.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Cut the Cliches Podcast</span><br>
           <span>Invited as a guest to speak about the psychology of choice</span>
          </li></a>
-         <a href="https://twitter.com/freelancer/status/910322942113959936"><li class="w3-padding-16">
+       <a href="https://twitter.com/freelancer/status/910322942113959936"><li class="w3-padding-16">
           <img src="NASAcontest.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Winning a NASA contest</span><br>
           <span>Chatting about my experience winning my first contest with NASA</span>
