--- a/research/index.html
+++ b/research/index.html
@@ -174,25 +174,30 @@ L Sitbon, RA Brown, L Fell, S Koplick, C Beaumont</p>
   <footer class="w3-container w3-padding-32 w3-dark-grey">
   <div class="w3-row-padding">
     <div class="w3-third">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </div>
-  
-    <div class="w3-third">
       <h3>MEDIA</h3>
       <ul class="w3-ul w3-hoverable">
-        <a href="https://lozelise.github.io/Portfolio/https://www.abc.net.au/7.30/australias-gig-economy.-is-work-on-demand-the-new/10103320"><li class="w3-padding-16">
-          <img src="GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
+        <a href="https://www.qut.edu.au/science-engineering/about/news?id=149768"><li class="w3-padding-16">
+          <img src="https://lozelise.github.io/Portfolio/Andy.png" class="w3-left w3-margin-right" style="width:50px">
+          <span class="w3-large">Andy the Anatomy Bot at Robotronica</span><br>
+          <span>Andy the Anatomy bot visiting Robotronica, where Andy and I taught about Pneumatic Artificial Muscles and how to make them</span>
+           </li></a>
+        <a href="https://www.abc.net.au/7.30/australias-gig-economy.-is-work-on-demand-the-new/10103320"><li class="w3-padding-16">
+          <img src="https://lozelise.github.io/Portfolio/GigEconomy.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">7:30 Report - Gig Economy</span><br>
           <span>Speaking about working and using Freelancer.com as a 'side gig'</span>
           </li></a>
+      </ul>
+    </div>
+  
+    <div class="w3-third">
+      <h3>__________________</h3>
+      <ul class="w3-ul w3-hoverable">
        <a href="https://commswork.com.au/cut-the-cliches-episode-11-psychology-of-choice-lauren-fell"> <li class="w3-padding-16">
           <img src="https://lozelise.github.io/Portfolio/PsychofChoice.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Cut the Cliches Podcast</span><br>
           <span>Invited as a guest to speak about the psychology of choice</span>
          </li></a>
-         <a href="https://twitter.com/freelancer/status/910322942113959936"><li class="w3-padding-16">
+       <a href="https://twitter.com/freelancer/status/910322942113959936"><li class="w3-padding-16">
           <img src="https://lozelise.github.io/Portfolio/NASAcontest.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Winning a NASA contest</span><br>
           <span>Chatting about my experience winning my first contest with NASA</span>
