--- a/research/index.html
+++ b/research/index.html
@@ -77,10 +77,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">Publications</h1><br>
-      <p>Fell, L., Dehdashti, S., Bruza, P., & Moreira, C. (2019). An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making. arXiv preprint arXiv:1908.07935 <href a="https://arxiv.org/abs/1908.07935">Access here</a></p>
-      <p>Moreira, C., Fell, L., Dehdashti, S., Bruza, P., & Wichert, A. (2019). Towards a Quantum-Like Cognitive Architecture for Decision-Making. arXiv preprint arXiv:1905.05176.<hfref a "https://arxiv.org/abs/1905.05176">Access here</a></p> 
-      <p>Sitbon, L., Fell, L., Poxon, D., Zhang, J., & Geva, S. (2014, November). Towards universal search design. In Proceedings of the 2014 Australasian Document Computing Symposium (p. 109). ACM.<href a"https://eprints.qut.edu.au/79704/">Access here</a></p>
-      <p class="w3-large w3-text-grey w3-hide-medium"><href a "https://lozelise.github.io/Portfolio/publications">More</a></p>
+      <p>Fell, L., Dehdashti, S., Bruza, P., & Moreira, C. (2019). An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making. arXiv preprint arXiv:1908.07935 <a href ="https://arxiv.org/abs/1908.07935">Access here</a></p>
+      <p>Moreira, C., Fell, L., Dehdashti, S., Bruza, P., & Wichert, A. (2019). Towards a Quantum-Like Cognitive Architecture for Decision-Making. arXiv preprint arXiv:1905.05176.<a href ="https://arxiv.org/abs/1905.05176">Access here</a></p> 
+      <p>Sitbon, L., Fell, L., Poxon, D., Zhang, J., & Geva, S. (2014, November). Towards universal search design. In Proceedings of the 2014 Australasian Document Computing Symposium (p. 109). ACM. <a href ="https://eprints.qut.edu.au/79704/">Access here</a></p>
+      <p class="w3-large w3-text-grey w3-hide-medium"><a href="https://lozelise.github.io/Portfolio/publications">More</a></p>
     </div>
   </div>
   
